--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,58 +1,46 @@
 /* pages/home/home.wxss */
 page {
-    background-color: #ccc;
+    background-color:black;
 }
 
-.title{
+.bg{
+   position: absolute; 
+   top: 0rpx;
+   left: 0rpx;
+   width: 100%;
+   height: 100%;
+   z-index: -1;  
+}
+
+movable-area {
+  position: absolute;
+  height:100%;
   width: 100%;
-  padding-left: 30rpx;
-  color: green;
-  font-weight: bold;
+  margin: 0rpx;
+  /* background-color: #ccc; */
+  overflow:hidden;
 }
-
-.icp_container{
-  width: 100%; 
+.picture{
+  width: 200rpx;
+  height: 200rpx;
+  border-top-left-radius: 20rpx;
+  border-top-right-radius: 20rpx;
+} 
+.cliked{
+  width: 100rpx;
+  height:70rpx;
+}
+movable-view {
+  height: 300rpx;
+  width: 200rpx;
   display: flex;
-  flex-direction: row;
-  border: 1px solid #d0d0d0;  
-  border-radius: 10rpx;  
-  margin-left: 20rpx;
-  margin-top: 10rpx;
-}
-.searchcion{
-       margin: 10rpx 10rpx 10rpx 10rpx;  
-      position: absolute;  
-      left:25rpx;  
-      z-index: 2;  
-      width: 20px;  
-      height: 20px;  
-      text-align: center; 
-}
-
-input{
-    width: 70%;
-    padding-left: 60rpx;
-    height: 60rpx;  
-    border-radius: 5px;  
-    background-color: #fff;
-    font-weight: bold;
-}
-.ok{
-      margin-left: 15rpx;  
-      width: 15%;  
-      line-height: 150%;  
-      text-align: center;
-      background-color: white;  
-      border: 1px solid #d0d0d0;  
-      border-radius: 10rpx;  
-}
-
-.view{
-  font-size: 30rpx;
-  margin-top: 20rpx;
+  /* justify-content: center;  */
+  align-items: center;
+  flex-direction: column;
   padding: 0rpx;
-  padding-left: 20rpx;
-  width: 100%;
-  /* height: 500rpx; */
-  background-color: white;
+  background: gray;
+  color: #fff;
+  font-size: 25rpx;
+  text-align: center;
+  border-radius: 20rpx;
 }
