--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -3,41 +3,53 @@ page {
     background-color: #ccc;
 }
 
-
-.icp_container{
-  width: 100%; 
-  top: 20rpx;
+.bg{
   position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0rpx;
+  left: 0rpx;
+  z-index: -1;
+}
+.front{
+  position: absolute;
+}
+.search_container{
+  width: 100%; 
+  height: 70rpx;
+  padding: 0rpx;
+  margin: 0rpx;
+  margin-top: 40rpx;
   display: flex;
   flex-direction: row;
-  border: 1px solid #d0d0d0;  
-  border-radius: 10rpx;  
-  margin-left: 20rpx;
-  margin-top: 10rpx;
+  border: 0rpx solid #d0d0d0;  
 }
+
 .searchcion{
-      position: absolute;
-      margin-top:10rpx;  
-      left:10rpx;  
-      z-index: 2;  
-      width: 25px;  
-      height: 25px;  
-      text-align: center; 
+    position: absolute;  
+    top:55rpx; 
+    left: 55rpx; 
+    width: 30rpx;  
+    height: 30rpx;  
+    text-align: center; 
 }
 
 input{
-    width: 70%;
-    padding-left: 60rpx;
-    height: 60rpx;  
-    border-radius: 5px;  
+    width: 500rpx;
+    margin-left: 50rpx;
+    margin-right: 20rpx;
+    padding-left: 50rpx;
+    height: 60rpx;
+    border-radius:  10rpx;  
     background-color: #fff;
     font-weight: bold;
 }
 
 .ok{
-      margin-left: 15rpx;  
-      width: 15%;  
-      line-height: 150%;  
+      margin-right: 40rpx; 
+      font-weight: bold;
+      height: 60rpx;
+      width: 100rpx; 
       text-align: center;
       background-color: white;  
       border: 1px solid #d0d0d0;  
@@ -48,26 +60,29 @@ input{
 
 #listcontainer{
   width: 100%;
-  margin-top:120rpx;
+  margin-top:50rpx;
 }
 
 #listitem{
-  margin-left:30rpx;
-  margin-top:10rpx;
+  margin-top:15rpx;
   border:1rpx solid #fff; 
-  padding: 5rpx;
-  width:90%;
+  margin-left: 25rpx;
+  margin-right: 25rpx;
   height:160rpx;
+  width: 700rpx;
   display: flex;
   flex-direction: row;
   align-items: center;
+  border-radius: 10rpx;
+  background-color: #ccc;
 }
+
 #itemimg{
-  margin-left: 20rpx;
+  margin-left: 10rpx;
   margin-right: 20rpx;
   width: 200rpx;
   height: 150rpx;
-  mode:"aspectFill";
+  border-radius: 20rpx;
 }
 #iteminfo{
   color: green;
@@ -86,12 +101,11 @@ input{
   justify-content: center;
 }
 
-#next{
-  
-margin-right:40rpx;
+#prev{
+  margin-left: 20rpx;
+  margin-right:20rpx;
 }
 
-#next{
-  
-margin-left: 40rpx;
+#next{ 
+ margin-left: 20rpx;
 }
